Fix gap ul li for safari in flexbox

--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ nav ul {
   list-style: none;
 }
 
+/* --ToDo: Decide if i keep it */
+
+_::-webkit-full-page-media, _:future, :root nav ul li {
+  padding-right: 3em;
+}
+
 nav a {
   text-decoration: none;
   color: black;
